--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,31 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-# column: value
+jamie:
+  id: 1
+  email: jamie@example.com
+  encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
+  created_at: 2020-07-01 04:12:26.378108
+  updated_at: 2020-07-01 04:12:26.378108
+  username: Jamie Macey
+eric:
+  id: 2
+  email: eric@example.com
+  encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
+  created_at: 2020-07-02 04:12:26.378108
+  updated_at: 2020-07-02 04:12:26.378108
+  username: Eric Simons
+albert:
+  id: 3
+  email: albert@example.com
+  encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
+  created_at: 2020-07-03 04:12:26.378108
+  updated_at: 2020-07-03 04:12:26.378108
+  username: Albert Pai
+jacob:
+  id: 4
+  email: jacob@example.com
+  encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
+  created_at: 2020-07-04 04:12:26.378108
+  updated_at: 2020-07-04 04:12:26.378108
+  username: Jacob Schmidt
