--- a/test/fixtures/articles.yml
+++ b/test/fixtures/articles.yml
@@ -11,6 +11,8 @@ webapps:
     
     It's a great solution for learning how other frameworks work.
   user: eric
+  created_at: 2020-01-20 10:10:10
+  updated_at: 2020-01-20 10:10:10
 
 song:
   title: The song you won't ever stop singing. No matter how hard you try.
@@ -22,3 +24,5 @@ song:
     Some people started singing it, not knowing what it was,
     And they'll continue singing it forever just because
   user: albert
+  created_at: 2020-01-12 20:10:10
+  updated_at: 2020-01-12 20:10:10
